[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
x86_64 = { version = "0.15.1", default-features = false, features = [
  "instructions",
] }
uart_16550 = "0.3.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
volatile = "0.2"
